--- a/css/site_style.css
+++ b/css/site_style.css
@@ -71,3 +71,67 @@ span.sub_menu_text_design{
     padding: 2% 5% !important;
 }
 
+.form-control{
+	height:35px;
+}
+.select2-container .select2-selection{
+	height:35px !important;
+}
+.table th, .table td {
+	padding: 3px !important;
+}
+
+
+.sidebar .nav-item .nav-link span {
+	color: #fff;
+	font-size:12px;
+}
+.sidebar .nav-item .nav-link{
+	border:1px solid #fff;
+	margin-top:2px;
+	margin-bottom:2px;
+	color: #fff;
+	padding-left: 20px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+}
+
+
+.form-control {
+    border:1px solid #000000;
+}
+
+.reqr{
+	font-size:10px;
+	color:red;
+	font-weight:bold;
+	font-style:italic;
+}
+
+ body {
+  background-image: url("images/bg.jpg");
+  background-color: #cccccc;
+} 
+
+.mborder{
+	padding:3px;
+	border:1px solid #808080;
+}
+.authimg{
+	position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.reqfield{
+	color:red;
+	font-style: italic;
+	font-size:10px;
+	font-weight:bold;
+}
+.navbar{
+	padding:0px 10px;
+}
